# create_c_project

./: .gitattributes  README.md  create_c_project.py
example_executable/: CMakeLists.txt
example_lib/: CMakeLists.txt
example_lib/example_lib/: CMakeLists.txt
example_lib/example_lib/include/example_lib/: example_lib.h
example_lib/example_lib/src/: example_lib.c
example_lib/test/: CMakeLists.txt
example_lib/test/src/: Main.c
